--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,19 @@ dmypy.json
 .DS_Store
 .AppleDouble
 .LSOverride
+
+
+
+# Project specific
+assessment/assessment_*.md
+agent1.py
+agent2.py
+agent3.py
+agent4.py
+agent5.py
+agent6.py
+agent7.py
+agent8.py
+agent9.py
+agent10.py
+agent11.py
