feat: Add agent validator

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+CACHEDIR.TAG
+.lock
+
 
 # Virtual Environments
 venv/
@@ -93,3 +96,4 @@ agent8.py
 agent9.py
 agent10.py
 agent11.py
+execution_metrics.json
